--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,14 @@ env:
 
 on:
   push:
-    branches: ["master", "main"]
+    branches: ["main"]
+    paths:
+      - "fuel_tracker/**"
+      - "requirements/**"
+      - "tests/**"
+      - "compose/**"
+      - "config/**"
+      - "locale/**"
   workflow_dispatch:
 
 concurrency:
@@ -15,21 +22,6 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  linter:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code Repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version-file: ".python-version"
-      # Consider using pre-commit.ci for open source project
-      - name: Run pre-commit
-        uses: pre-commit/action@v3.0.1
-
-  # With no caching at all the entire ci process takes 3m to complete!
   pytest:
     runs-on: ubuntu-latest
     if: "!contains(github.event.commits[0].message, '[skip test]')"
