--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
         run: docker compose -f docker-compose.local.yml run django pytest
 
       - name: Check coverage
-        run: docker compose -f docker-compose.local.yml run coverage html
+        run: docker compose -f docker-compose.local.yml run --rm django coverage html
 
       - name: Tear down the Stack
         run: docker compose -f docker-compose.local.yml down
