--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,10 +43,12 @@ jobs:
         run: docker compose -f docker-compose.local.yml run django pytest
 
       - name: Run Tests with Coverage
-        run: docker compose -f docker-compose.local.yml run --rm django sh -c "coverage run -m pytest && coverage report && coverage html"
+        run: |
+          docker compose -f docker-compose.local.yml run --rm django sh -c "coverage run -m pytest && coverage report && coverage html"
+          docker compose -f docker-compose.local.yml cp django:/app/htmlcov .
 
       - name: Upload Coverage Report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: htmlcov/
