--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,6 +9,7 @@ on:
   push:
     branches: ["main"]
     paths:
+      - ".github/workflows/tests.yml"
       - "fuel_tracker/**"
       - "requirements/**"
       - "tests/**"
