--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -91,11 +91,11 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add coverage.svg
-          git commit -m "Updated coverage.svg"
+          git commit -m "Updated coverage.svg [skip ci]"
 
-      - name: Create Pull Request
+      - name: Push changes
         if: steps.changed_files.outputs.files_changed == 'true'
-        uses: peter-evans/create-pull-request@v4
+        uses: ad-m/github-push-action@master
         with:
-          token: ${{ secrets.ACCESS_TOKEN_GITHUB }}
-          title: "[Automatic] Coverage Badge Update"
+          github_token: ${{ secrets.ACCESS_TOKEN_GITHUB }}
+          branch: ${{ github.ref }}
