--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -24,16 +24,10 @@ env:
   TRAEFIK_IMAGE: ${{ secrets.TRAEFIK_IMAGE }}
 
 on:
-  push:
-    branches: ["main"]
-    paths:
-      - ".github/workflows/deployment.yml"
-      - "fuel_tracker/**"
-      - "requirements/**"
-      - "tests/**"
-      - "compose/**"
-      - "config/**"
-      - "locale/**"
+  workflow_run:
+    workflows: [tests]
+    types:
+      - completed
   workflow_dispatch:
 
 concurrency:
@@ -44,6 +38,7 @@ jobs:
   build-and-push-images:
     name: Build Docker Images
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout master
         uses: actions/checkout@v4
