--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -18,6 +18,7 @@ services:
       - DJANGO_SECURE_SSL_REDIRECT=${DJANGO_SECURE_SSL_REDIRECT}
       - DJANGO_SERVER_EMAIL=${DJANGO_SERVER_EMAIL}
       - DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS_MODULE}
+      - DJANGO_READ_DOT_ENV_FILE=${DJANGO_READ_DOT_ENV_FILE}
       - REDIS_URL=${REDIS_URL}
       - WEB_CONCURRENCY=${WEB_CONCURRENCY}
       - POSTGRES_DB=${POSTGRES_DB}
