--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,10 +41,10 @@ jobs:
           load: true
           files: docker-compose.local.yml
           set: |
-            django.cache-from=type=gha,scope=django-cache
-            django.cache-to=type=gha,scope=django-cache,mode=max
-            postgres.cache-from=type=gha,scope=postgres-cache
-            postgres.cache-to=type=gha,scope=postgres-cache,mode=max
+            django.cache-from=type=gha,scope=tests-django-cache
+            django.cache-to=type=gha,scope=tests-django-cache,mode=max
+            postgres.cache-from=type=gha,scope=tests-postgres-cache
+            postgres.cache-to=type=gha,scope=tests-postgres-cache,mode=max
 
       - name: Check DB Migrations
         run: docker compose -f docker-compose.local.yml run --rm django python manage.py makemigrations --check
