--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -39,7 +39,7 @@ jobs:
   build-and-push-images:
     name: Build Docker Images
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' || !contains(github.event.commits[0].message, '[skip deploy]')}}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     steps:
       - name: Checkout master
         uses: actions/checkout@v4
