refactor(badges): move badges to .github dir

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,20 +42,20 @@ jobs:
           label: "release"
           status: ${{ steps.release.outputs.tag }}
           color: "blue"
-          path: "release.svg"
+          path: ".github/badges/release.svg"
 
       - name: Verify Changed files
         uses: tj-actions/verify-changed-files@v18
         id: changed_files
         with:
-          files: release.svg
+          files: .github/badges/release.svg
 
       - name: Commit files
         if: steps.changed_files.outputs.files_changed == 'true'
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add release.svg
+          git add .github/badges/release.svg
           git commit -m "Updated release.svg [skip ci]"
 
       - name: Push changes
